--- a/app/src/main/res/layout/activity_donation_ad.xml
+++ b/app/src/main/res/layout/activity_donation_ad.xml
@@ -33,7 +33,8 @@
                     android:layout_marginBottom="1dp"
                     android:layout_marginEnd="1dp"
                     android:layout_marginStart="1dp"
-                    android:layout_marginTop="1dp" />
+                    android:layout_marginTop="1dp"
+                    tools:ignore="ContentDescription" />
 
             </LinearLayout> <!-- display window -->
 
