Added the function to take photos and choose photos from users gallery, implemented on the DonationAd activity.

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -19,6 +19,13 @@
             android:textColor="@color/black"
             android:text="@string/homePageTV"/>
 
+        <Button
+            android:id="@+id/donationAdBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="@string/donationPrefsString"/>  <!--ONLY FOR TESTING PURPOSES-->
+
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
