The postcode on the Charity registration page is now limited to 4 digits

--- a/app/src/main/res/layout/activity_charity_registration_page.xml
+++ b/app/src/main/res/layout/activity_charity_registration_page.xml
@@ -58,6 +58,7 @@
             android:importantForAutofill="no"
             android:inputType="number"
             android:textSize="20sp"
+            android:maxLength="4"
             tools:ignore="LabelFor"/> <!--Postcode-->
 
         <EditText
