--- a/app/src/main/res/layout/activity_donation_ad.xml
+++ b/app/src/main/res/layout/activity_donation_ad.xml
@@ -17,7 +17,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="315dp"
-                android:layout_height="420dp"
+                android:layout_height="560dp"
                 android:layout_gravity="center"
                 android:background="@drawable/box"
                 android:gravity="center"
@@ -25,6 +25,26 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp">
+
+                <EditText
+                    android:id="@+id/titleET"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/title"
+                    android:importantForAutofill="no"
+                    android:inputType="textCapWords"
+                    android:textSize="20sp"
+                    tools:ignore="LabelFor" /> <!--Title-->
+
+                <EditText
+                    android:id="@+id/descriptionET"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/description"
+                    android:importantForAutofill="no"
+                    android:inputType="textShortMessage"
+                    android:textSize="20sp"
+                    tools:ignore="LabelFor" /> <!--Description-->
 
                 <ImageView
                     android:id="@+id/imageView"
@@ -34,13 +54,14 @@
                     android:layout_marginEnd="1dp"
                     android:layout_marginStart="1dp"
                     android:layout_marginTop="1dp"
-                    tools:ignore="ContentDescription" />
+                    android:textColor="@color/white"
+                    tools:ignore="ContentDescription" /><!--Photos-->
 
             </LinearLayout> <!-- display window -->
 
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
+                android:layout_width="315dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:background="@drawable/box"
@@ -65,6 +86,15 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
+                        <Button
+                            android:id="@+id/postBtn"
+                            android:layout_width="176dp"
+                            android:layout_height="44dp"
+                            android:layout_marginStart="65dp"
+                            android:layout_marginTop="40dp"
+                            android:layout_marginEnd="40dp"
+                            android:background="@color/colorAltAccent"
+                            android:text="Post"<!--Post Button-->
                     </LinearLayout>
 
                 </HorizontalScrollView>
