--- a/app/src/main/res/layout/activity_donation_ad.xml
+++ b/app/src/main/res/layout/activity_donation_ad.xml
@@ -94,7 +94,7 @@
                             android:layout_marginTop="40dp"
                             android:layout_marginEnd="40dp"
                             android:background="@color/colorAltAccent"
-                            android:text="Post"<!--Post Button-->
+                            android:text="post"/> <!--POST BUTTON-->
                     </LinearLayout>
 
                 </HorizontalScrollView>
