Donation Ad XML fixed as the title, description and post button were placed within the display window and gallery layouts

--- a/app/src/main/res/layout/activity_donation_ad.xml
+++ b/app/src/main/res/layout/activity_donation_ad.xml
@@ -12,12 +12,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/titleET"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/title"
+                android:importantForAutofill="no"
+                android:inputType="textCapWords"
+                android:textSize="20sp"
+                android:layout_marginTop="20dp"
+                tools:ignore="LabelFor" /> <!--Title-->
+
+            <EditText
+                android:id="@+id/descriptionET"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/description"
+                android:importantForAutofill="no"
+                android:inputType="textShortMessage"
+                android:textSize="20sp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                tools:ignore="LabelFor" /> <!--Description-->
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="315dp"
-                android:layout_height="560dp"
+                android:layout_height="420dp"
                 android:layout_gravity="center"
                 android:background="@drawable/box"
                 android:gravity="center"
@@ -25,26 +49,6 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp">
-
-                <EditText
-                    android:id="@+id/titleET"
-                    android:layout_width="250dp"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/title"
-                    android:importantForAutofill="no"
-                    android:inputType="textCapWords"
-                    android:textSize="20sp"
-                    tools:ignore="LabelFor" /> <!--Title-->
-
-                <EditText
-                    android:id="@+id/descriptionET"
-                    android:layout_width="250dp"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/description"
-                    android:importantForAutofill="no"
-                    android:inputType="textShortMessage"
-                    android:textSize="20sp"
-                    tools:ignore="LabelFor" /> <!--Description-->
 
                 <ImageView
                     android:id="@+id/imageView"
@@ -61,7 +65,7 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="315dp"
+                android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:background="@drawable/box"
@@ -85,21 +89,20 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/postBtn"
-                            android:layout_width="176dp"
-                            android:layout_height="44dp"
-                            android:layout_marginStart="65dp"
-                            android:layout_marginTop="40dp"
-                            android:layout_marginEnd="40dp"
-                            android:background="@color/colorAltAccent"
-                            android:text="post"/> <!--POST BUTTON-->
                     </LinearLayout>
 
                 </HorizontalScrollView>
 
             </LinearLayout> <!-- gallery -->
+
+            <Button
+                android:id="@+id/postBtn"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="40dp"
+                android:background="@color/colorAltAccent"
+                android:text="@string/postBtn"/> <!--Post Button-->
 
         </LinearLayout>
 
