--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -7,45 +7,48 @@
     android:background="@color/white"
     tools:context=".HomePage">
 
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
+        <include
+            android:id="@id/toolbar"
+            layout="@layout/toolbar"/>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
-            android:layout_marginBottom="20dp"
-            android:scrollbars="vertical"
-            tools:layout_editor_absoluteX="114dp"
-            tools:layout_editor_absoluteY="76dp" />
+            android:gravity="center"
+            android:layout_height="match_parent">
+
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="80dp"
+                android:layout_marginBottom="20dp"
+                android:scrollbars="vertical"
+                tools:layout_editor_absoluteX="114dp"
+                tools:layout_editor_absoluteY="76dp" />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
-            <TextView
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:text="@string/homePageTV"
-                android:textColor="@color/black" />
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
 
-            <Button
-                android:id="@+id/donationAdBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="@string/donationPrefsString"/>  <!--ONLY FOR TESTING PURPOSES-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:text="@string/homePageTV"
+                    android:textColor="@color/black" />
 
-        </LinearLayout>
+            </LinearLayout>
 
-    </RelativeLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
