--- a/app/src/main/res/layout/activity_booking_page.xml
+++ b/app/src/main/res/layout/activity_booking_page.xml
@@ -1,32 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/PhoneET"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BookingPage">
 
-    <include
-        android:id="@id/toolbar"
-        layout="@layout/toolbar"/>
-
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="Booking Page"
+            android:textColor="@color/white"
+            android:textSize="36sp" /> <!--Booking Title-->
 
-    </android.support.design.widget.AppBarLayout>
+        <EditText
+            android:id="@+id/timeET"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:hint="Time"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:textSize="20sp"
+            tools:ignore="LabelFor"/> <!--Time-->
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:src="@drawable/ic_location_searching" />
+        <EditText
+            android:id="@+id/dateET"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:hint="Date"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:textSize="20sp"
+            tools:ignore="LabelFor"/> <!--Date-->
 
-</android.support.design.widget.CoordinatorLayout>
+        <EditText
+            android:id="@+id/locationET"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:hint="Latitude/Longitude"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:textSize="20sp"
+            tools:ignore="LabelFor"/> <!--Location-->
+
+        <EditText
+            android:id="@+id/commentsET"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:hint="Comments/Description"
+            android:importantForAutofill="no"
+            android:inputType="number"
+            android:textSize="20sp"
+            android:maxLength="4"
+            tools:ignore="LabelFor"/> <!--Comments-->
+
+
+        <Button
+            android:id="@+id/bookButtonET"
+            android:layout_width="196dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@color/colorAltAccent"
+            android:text="Book" /> <!--Book Button-->
+
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
