--- a/app/src/main/res/layout/activity_booking_page.xml
+++ b/app/src/main/res/layout/activity_booking_page.xml
@@ -14,7 +14,7 @@
 
         <include
             android:id="@id/toolbar"
-            layout="@layout/toolbar"/>
+            layout="@layout/toolbar"/> <!--Toolbar-->
 
         <ScrollView
             android:layout_width="match_parent"
@@ -57,9 +57,10 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/longLatHT"
                     android:importantForAutofill="no"
-                    android:inputType="textPersonName"
+                    android:inputType="text"
+                    android:focusableInTouchMode="false"
                     android:textSize="20sp"
-                    tools:ignore="LabelFor"/> <!--Location-->
+                    tools:ignore="LabelFor,TextFields"/> <!--Location-->
 
                 <EditText
                     android:id="@+id/commentsET"
@@ -71,7 +72,6 @@
                     android:textSize="20sp"
                     android:maxLength="4"
                     tools:ignore="LabelFor"/> <!--Comments-->
-
 
                 <Button
                     android:id="@+id/bookButtonET"
