--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,14 +121,41 @@
                     android:textColor="@color/white"
                     android:textSize="18sp" />
             </RelativeLayout>
-        </android.support.v7.widget.CardView> <!--login button-->
+        </android.support.v7.widget.CardView> <!--register button-->
 
         <LinearLayout
             android:id="@+id/padding4"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/quickAccessCV"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="@color/colorPrimaryDark"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:background="@null"
+                        android:text="@string/quickAccessBtn"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+            </android.support.v7.widget.CardView> <!--login button-->
+
         </LinearLayout> <!--PADDING-->
 
 </LinearLayout>
