--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -15,8 +15,24 @@
             android:id="@+id/homeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="280dp"
+            android:layout_marginEnd="20dp"
             android:src="@drawable/ic_home_white_24dp"
+            android:background="@color/colorAltAccent"/>
+
+        <ImageButton
+            android:id="@+id/settingsBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="200dp"
+            android:src="@drawable/ic_settings_white_24dp"
+            android:background="@color/colorAltAccent"/>
+
+        <ImageButton
+            android:id="@+id/statisticsBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/ic_chart_white_24dp"
             android:background="@color/colorAltAccent"/>
 
         <ImageButton
