--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:drawableStart="@drawable/ic_action_user"
             android:ems="10"
             android:hint="@string/usernameHint"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             android:textSize="16sp" /> <!--username-->
 
         <EditText
