--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -27,8 +27,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/nameLabel"
-            android:text="@string/nameLabel"
+            android:text="@string/firstNameTV"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:importantForAutofill="no"
@@ -36,14 +35,38 @@
 
 
         <TextView
-            android:id="@+id/nameTV"
+            android:id="@+id/firstNameTV"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:textSize="15sp"
             tools:ignore="LabelFor"/>
 
-    </LinearLayout>
+    </LinearLayout> <!--First Name-->
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="@string/lastNameTV"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:importantForAutofill="no"
+            android:textSize="15sp"/>
+
+
+        <TextView
+            android:id="@+id/lastNameTV"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:textSize="15sp"
+            tools:ignore="LabelFor"/>
+
+    </LinearLayout> <!--Last Name-->
 
     <LinearLayout
         android:layout_width="wrap_content"
